--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # server side
-OPENAI_API_KEY=
+OPENAI_API_KEY= #optional if mode is static
 LINE_CHANNEL_ID= #optional if enable liff auth
 
 # client side
+NEXT_PUBLIC_MODE= # static or host
 NEXT_PUBLIC_ENABLE_AUTH= #optional
 NEXT_PUBLIC_LIFF_ID= #optional if enable liff auth
 NEXT_PUBLIC_OPENAI_OPTION_MAX_TOKENS= #optional
