--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,7 +14,6 @@
     "antd": "^5.13.2",
     "clsx": "^2.1.0",
     "next": "^14.1.0",
-    "openai": "^4.25.0",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@next/bundle-analyzer": "^14.1.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -32,6 +33,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "ignore-loader": "^0.1.2",
+    "openai": "^4.26.0",
     "postcss": "^8",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
