✨ add gemini api route

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # server side
 OPENAI_API_KEY= #optional if mode is static
 LINE_CHANNEL_ID= #optional if enable liff auth
+GEMINI_API_KEY= #optional
+GEMINI_API_AUTH_TOKEN= #optional
 
 # client side
 NEXT_PUBLIC_MODE= # static or host
@@ -8,3 +10,6 @@ NEXT_PUBLIC_ENABLE_AUTH= #optional
 NEXT_PUBLIC_LIFF_ID= #optional if enable liff auth
 NEXT_PUBLIC_OPENAI_OPTION_MAX_TOKENS= #optional
 NEXT_PUBLIC_OPENAI_MAX_MESSAGES= #optional
+
+# local development for testing @google/generative-ai fetch failed issue
+NODE_TLS_REJECT_UNAUTHORIZED=0
