--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.13.2",
     "clsx": "^2.1.0",
-    "next": "^14.1.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
@@ -22,8 +22,10 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.16.0",
     "@iconify/react": "^4.1.1",
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -31,8 +33,9 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
+    "cors": "^2.8.5",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.5",
     "ignore-loader": "^0.1.2",
     "openai": "^4.26.0",
     "postcss": "^8",
