--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
-    "antd": "^5.13.2",
+    "antd": "^5.22.4",
     "clsx": "^2.1.0",
-    "next": "^14.1.0",
-    "react": "^18",
+    "next": "14",
+    "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "zustand": "^4.5.0"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@iconify/react": "^4.1.1",
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -31,10 +33,11 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
+    "cors": "^2.8.5",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.5",
     "ignore-loader": "^0.1.2",
-    "openai": "^4.26.0",
+    "openai": "^4.76.1",
     "postcss": "^8",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
