✨ add speech recognize feat

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "cors": "^2.8.5",
