✨ add deepseek support

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # server side
-OPENAI_API_KEY= #optional if mode is static
+OPENAI_API_KEY= #optional if mode is host
+DEEPSEEK_API_KEY= #optional if need to use deepseek as model provider
 LINE_CHANNEL_ID= #optional if enable liff auth
 GEMINI_API_KEY= #optional
 GEMINI_API_AUTH_TOKEN= #optional
