--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.24.0",
+    "@googleapis/customsearch": "^3.2.0",
     "@iconify/react": "^4.1.1",
     "@next/bundle-analyzer": "^14.1.0",
     "@types/cors": "^2.8.17",
