feat: add Gemini image generate & recognize

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ NEXT_PUBLIC_LIFF_ID= #optional if enable liff auth
 NEXT_PUBLIC_OPENAI_OPTION_MAX_TOKENS= #optional
 NEXT_PUBLIC_OPENAI_MAX_MESSAGES= #optional
 
-# local development for testing @google/generative-ai fetch failed issue
+# local development for testing @google/genai fetch failed issue
 NODE_TLS_REJECT_UNAUTHORIZED=0
