--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@google/generative-ai": "^0.24.0",
+    "@google/genai": "^1.17.0",
     "@iconify/react": "^4.1.1",
     "@next/bundle-analyzer": "^14.1.0",
     "@types/cors": "^2.8.17",
